--- a/firstpage.html
+++ b/firstpage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>らふるWebサイト試作</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="firstpage.css">
 </head>
 
 <body>
